<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="enter_prod_id">Enter Product ID</string>
    <string name="add">ADD</string>
    <string name="get_product">GET PRODUCT</string>
    <string name="get">GET</string>
    <string name="prod_price">PROD PRICE\t</string>
    <string name="prod_name">PROD NAME\t</string>
    <string name="error_occured">Error Occured\nPlease try again</string>
    <string name="prod_id">PROD ID\t</string>
    <string name="get_all_prods">SHOW ALL PRODUCTS</string>
</resources>